Closed
Bug 242602
Opened 22 years ago
Closed 22 years ago
mozilla hangs after entering password fetching mail
Categories
(Core :: Layout, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.8alpha1
People
(Reporter: danm.moz, Assigned: bzbarsky)
Details
(Keywords: crash, hang, regression)
Attachments
(1 file)
|
1.55 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Launch Mozilla.
Open the Mail window (Ctrl-2).
Get New Messages (Ctrl-T).
POP server needs a password -- enter it, hit OK.
Password dialog remains open, application hangs. Cancel the dialog and
attempt to close the mail window, Mozilla crashes.
I have another one. Try to install a Firefox extension. Something very similar
happens in the summary dialog at the end of the installation process.
I suspect bug 242578 is the same thing.
Strangely, this seems to affect only debug builds, and perhaps only Windows.
The hang stack looks like this
SearchTable(PLDHashTable * 0x041f9b44, const void * 0x03e5a508, unsigned int
3063042188, int 2) line 400 + 6 bytes
PL_DHashTableOperate(PLDHashTable * 0x041f9b44, const void * 0x03e5a508, int 2)
line 557 + 21 bytes
PresShell::ReflowCommandRemoved(nsHTMLReflowCommand * 0x03e5a508) line 6526 + 20
bytes
PresShell::CancelAllReflowCommands(PresShell * const 0x041f9a90) line 3883
PresShell::Destroy(PresShell * const 0x041f9a90) line 1990
DocumentViewerImpl::Destroy(DocumentViewerImpl * const 0x041f5038) line 1219
nsDocShell::Destroy(nsDocShell * const 0x0410e20c) line 3090
nsWebShell::Destroy(nsWebShell * const 0x0410e20c) line 1229
nsXULWindow::Destroy(nsXULWindow * const 0x041085e8) line 507
nsWebShellWindow::Destroy(nsWebShellWindow * const 0x041085e8) line 1577 + 9 bytes
nsChromeTreeOwner::Destroy(nsChromeTreeOwner * const 0x0410e924) line 346
GlobalWindowImpl::ReallyCloseWindow() line 3632
GlobalWindowImpl::CloseWindow(nsISupports * 0x0410eb7c) line 4691
nsJSContext::ScriptEvaluated(int 1) line 1727 + 18 bytes
nsJSContext::CallEventHandler(JSObject * 0x041b7dc0, JSObject * 0x00afd640,
unsigned int 2, long * 0x031fe9f8, long * 0x0012ea28) line 1282
GlobalWindowImpl::RunTimeout(nsTimeoutImpl * 0x041a8838) line 5030
GlobalWindowImpl::TimerCallback(nsITimer * 0x03373a30, void * 0x041a8838) line 5390
nsTimerImpl::Fire() line 387 + 17 bytes
...
It's unable to exit from the for(;;) loop in SearchTable.
This fixes the problem:
cvs up -j3.726 -j3.724 nsPresShell.cpp
This one's all yours, Boris :) cc:ing the reviewers of bug 240934.
| Assignee | ||
Updated•22 years ago
|
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 147660 [details] [diff] [review]
Doh. This should fix it
CancelAllReflowCommands() removes them from the hashtable too, of course... so
we need to not finish the hashtable till after that.
Attachment #147660 -
Flags: superreview?(roc)
Attachment #147660 -
Flags: review?(roc)
Attachment #147660 -
Flags: superreview?(roc)
Attachment #147660 -
Flags: superreview+
Attachment #147660 -
Flags: review?(roc)
Attachment #147660 -
Flags: review+
| Assignee | ||
Comment 3•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•