Make sure to not finish the reflow command hash till we've cancelled all commands on shutdown.  Bug 242602, r+sr=dbaron